--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
  <hr/>
     <p>
         <h3> 
-            <a href="./public/movietracker.html">Movie Ranking Project</a>
+            <a href="./public/movie-ranking.html">Movie Ranking Project</a>
         <br/><br/>
-            <a href="./public/movietracker.html"><img src="./assets/images/movietracker.png" alt="screenshot of movie project" height="200"></a>
+            <a href="./public/movie-ranking.html"><img src="./assets/images/movietracker.png" alt="screenshot of movie project" height="200"></a>
         </h3 >
     </p>
 
